Lay out base formatting for modal window

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet'>
-
+    <link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Limelight' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Bebas+Neue' rel='stylesheet'>
 
     <meta
       name="description"
